@@ -56,6 +56,7 @@ struct ph_st {
 	STRLEN quotedlen;           /* length of the quoted value */
 	bool   referenced;          /* used for PREPARE AS construction */
 	bool   defaultval;          /* is it using a generic 'default' value? */
+	bool   isdefault;           /* Are we passing a literal 'DEFAULT'? */
 	sql_type_info_t* bind_type; /* type information for this placeholder */
 	struct ph_st *nextph;       /* more linked list goodness */
 };
@@ -91,6 +92,7 @@ struct imp_sth_st {
 	bool   direct;           /* allow bypassing of the statement parsing */
 	bool   is_dml;           /* is this SELECT/INSERT/UPDATE/DELETE? */
 	bool   has_binary;       /* does it have one or more binary placeholders? */
+	bool   has_default;      /* does it have one or more 'DEFAULT' values? */
 };
 
 /* Other (non-static) functions we have added to dbdimp.c */
