@@ -1,6 +1,8 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.44
+	- Add experimental support for using DEFAULT values inside 
+		of execute with $DBDPG_DEFAULT. [GSM]
 	- Return the proper SQLSTATE codes on connection failures.
 		(CPAN bug #17115) [GSM]
 	- Fix parser to handle leading parens. (CPAN bug #15481) [GSM]
